# kubemq-rust

./: Cargo.toml  build.rs
proto/kubemq/: kubemq.proto
src/: lib.rs
